# gba-emulator

./: .gitignore  CMakeLists.txt  README.md  regenerate-project.bat  regenerate-project.sh
cmake-modules/: PrecompiledHeader.cmake
common/: CMakeLists.txt
common/include/debugging/: logger.h
common/include/memory/: memory_util.h
common/src/debugging/: logger.cpp
emulator/: CMakeLists.txt
emulator/include/: system_on_a_chip.h
emulator/include/board/: advanced_game_boy.h  bus.h
emulator/include/cartridge/: advance_game_pak.h  color_game_pak.h  game_pak.h
emulator/include/cpu/: arm7tdmi.h  cpu.h  cpu_constants.h  sm83.h
emulator/include/memory/: memory_constants.h  memory_types.h
emulator/src/cpu/: arm7tdmi.cpp  cpu.cpp  sm83.cpp
emulator/test/cpu/: cpu_test.cpp
interface/: CMakeLists.txt
