# Common

SET(COMMON_SOURCE_DIR ${COMMON_DIR}/src)

SET(HEADER_FILES
  ${COMMON_HEADER_DIR}/debugging/logger.h
  ${COMMON_HEADER_DIR}/memory/memory_util.h
)

SET(THIRD_PARTY_HEADERS

)

SET(SOURCE_FILES
  ${COMMON_SOURCE_DIR}/debugging/logger.cpp
)

INCLUDE_DIRECTORIES(BEFORE
  ${COMMON_HEADER_DIR}/
  ${BOOST_DIR}/
)

SOURCE_GROUP(TREE ${COMMON_HEADER_DIR} PREFIX "include" FILES ${HEADER_FILES})
SOURCE_GROUP(TREE ${COMMON_SOURCE_DIR} PREFIX "src" FILES ${SOURCE_FILES})

ADD_LIBRARY(Common
  ${HEADER_FILES}
  ${THIRD_PARTY_HEADERS}
  
  ${SOURCE_FILES}
)

TARGET_USE_COMMON_OUTPUT_DIRECTORY(Common)

TARGET_LINK_LIBRARIES(Common)
