# Interface

SET(INTERFACE_SOURCE_DIR ${INTERFACE_DIR}/src)

SET(HEADER_FILES

)

SET(THIRD_PARTY_HEADERS

)

SET(SOURCE_FILES
  ${INTERFACE_SOURCE_DIR}/main.cpp
)

INCLUDE_DIRECTORIES(BEFORE
  ${INTERFACE_HEADER_DIR}/
  ${BOOST_DIR}/
)

SOURCE_GROUP(TREE ${INTERFACE_HEADER_DIR} PREFIX "include" FILES ${HEADER_FILES})
SOURCE_GROUP(TREE ${INTERFACE_SOURCE_DIR} PREFIX "src" FILES ${SOURCE_FILES})

ADD_EXECUTABLE(Interface
  ${HEADER_FILES}
  ${THIRD_PARTY_HEADERS}
  
  ${SOURCE_FILES}
)

TARGET_USE_COMMON_OUTPUT_DIRECTORY(Interface)

TARGET_LINK_LIBRARIES(Interface Emulator Common)
